# franko-06

./: (OLD) test25.py  .gitignore  DG_text_to_speech.py  EL_text_to_speech.py  audio_constants.py  audio_ffd0d505-0f76-4178-a9cf-7351aa28da0a.raw  interviewer.py  interviewer_copy.py  private.key  pyproject.toml  temp_config_a09a495f-bbb1-467e-9e8e-60172668b9f0.json  temp_config_b6b63758-c4cd-4310-98b6-069353de13a8.json  test10.py  test100.py  test101.py  test11.py  test12.py  test14.py  test15.py  test16.py  test17.py  test18 (with shutdown code).py  test19.py  test20.py  test21 (with websocket reconnect attempts).py  test22.py  test23.py  testrender.py  text_to_speech.py
archive/: EL_text_to_speech.py  EL_text_to_speech_raw.py  audio_a106cf5b-6835-4fd5-ad4c-b572341ad1b8.raw
buffer_audio/: 01_buffer.raw  02_buffer.raw  03_buffer.raw  04_buffer.raw  05_buffer.raw  amelia_voice.raw  brittany_voice.raw  charlie_voice.raw  jim_voice.raw  understood_audio.raw  understood_okay_audio.raw
examples/: example_agent_setup.json
salesgpt/: agents.py  agents01.py  agents02.py  agents03.py  agents04.py  analysis_chains.py  chains.py  chains01.py  chains02.py  logger.py  prompts.py  salesgptapi.py  salesgptapi01.py  salesgptapi02.py  stages.py  stages01.py  stages02.py  variables.py  x.agents01 copy.py
salesgpt/churn_analysis_prompts/: analysis_output.py  part01_output_parser.py  part02_output_parser.py  part03_output_parser.py  part04_output_parser.py  part05_output_parser.py  part06_output_parser.py
salesgpt/client_configs/: agemate.py  churn.py  cursor.py  default.py  langfuse.py  sitewire.py
salesgpt/prompts_folder/: conversation_summary.py  current_goal_review.py  empathy_statement.py  goal_completeness_status.py  goal_review_narrative.py  goal_review_outcome.py  goal_review_product.py  goal_review_update.md  key_points.py  lead_closing.py  lead_concrete_example.py  lead_exploratory.py  lead_exploratory_01.py  lead_exploratory_02.py  lead_exploratory_03.py  lead_exploratory_narrative.py  lead_exploratory_outcome.py  lead_exploratory_product.py  lead_exploratory_update.md  lead_interviewer.py  lead_verbatim.py  question_count.py  response_selector.py  specific_context.py  stage_analyzer.py  transition.py
