[tool.poetry]
name = "SalesGPT"
version = "0.1.1"
description = "AI Customer Interviews "
authors = ["Fletcher Miles <fletcher@franko.ai>"]  

[tool.poetry.dependencies]
python = "^3.10"
langchain = ">=0.2.0"
openai = "^1.12.0"
chromadb = "^0.4.18"
tiktoken = ">=0.7.0"  # Updated to be compatible with langchain-openai
pydantic = "^2.5.2"
litellm = "^1.52.10"
ipykernel = "^6.27.1"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.23.1"
langchain-openai = "^0.2.9"
fastapi = "^0.110.0"
uvicorn = "^0.28.0"
python-dotenv = "^1.0.1"
groq = "^0.4.2"
websocket = "0.2.1"
vonage = "^3.13.0"
deepgram-sdk = "^3.5.2"
redis = "^5.0.3"
supabase = "^2.4.1"
replicate = "^0.25.2"
aiohttp = "^3.9.5"
langfuse = "^2.39.2"
pytz = "^2024.1"
langchain-community = "^0.3.7"
assemblyai = {extras = ["extras"], version = "^0.35.1"}

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
flake8 = "^6.1.0"
isort = "^5.12.0"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
